--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                       placeholder="ссылка RSS"
                       autocomplete="off"
                     />
-                    <label for="url-input">Ссылка RSS</label>
+                    <label id='urlLabel' for="url-input">Ссылка RSS</label>
                   </div>
                 </div>
                 <div class="col-auto">
